--- a/client/home.jade
+++ b/client/home.jade
@@ -1,9 +1,7 @@
 template(name='home')
+    +home_slider
+    +grid
     .ui.padded.stackable.grid
-        +home_slider
-        //- .centered.row
-        //-     .sixteen.wide.center.aligned.column
-                //- iframe(src="https://docs.google.com/presentation/d/e/2PACX-1vRfcMH9Chgsdum55ScQPW0z8JgKw8fzR662uCT97jk3X7Sl3VozVO0N6_J6z-fd4S4JHtDFDCK-_3i6/embed?start=true&loop=true&delayms=5000" frameborder="0" width="100%" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true")                
         .centered.row
             .four.wide.column
                 +shop_small
@@ -51,15 +49,20 @@ template(name='home')
     
                 //- +service_list
                 //- +service_slider            
-                //- with current_ad
-                //-     .ui.header #{title}
-                //-     img(src="{{c.url image height=500 width=800 background='white' crop='lpad'}}")
-                //-     |!{content}
-                //-     unless display_mode
-                //-         a(href=link) #{link}
-                //-         +voting
+            .four.wide.column
+                +posts_small
+            .four.wide.column
+                +groups_small
+            .four.wide.column
+                .ui.grey.header community ad
+                with current_ad
+                    .ui.header #{title}
+                    img(src="{{c.url image height=500 width=800 background='white' crop='lpad'}}")
+                    |!{content}
+                    a(href=link) #{link}
+                    +voting
                 //- .ui.hidden.divider
-        .centered.row
+        .row
             //- .four.wide.column
                 //- +gallery_small
             .four.wide.column
@@ -125,6 +128,15 @@ template(name='home')
 //- 
 
 
+
+
+
+template(name='latest_posts')
+    a.ui.header(href="/m/post")
+        +i name='blog'
+        |latest posts
+
+
 template(name='home_alerts')
     .ui.header 
         +i name='alert'
@@ -132,7 +144,7 @@ template(name='home_alerts')
 
 
 template(name='home_posts')
-    .ui.header 
+    a.ui.header(href="/m/post")
         +i name='post'
         |posts
 
