--- a/client/fields.jade
+++ b/client/fields.jade
@@ -1021,8 +1021,27 @@ template(name='multi_doc_edit')
     //-  //             if icon
     //-  i.grey.icon(class=icon)
     //-  //             |#{title}
-
     
+    
+    
+template(name='business_edit')
+    .ui.input
+        input#business_name(type='text' placeholder=title autocomplete="off")
+        //- input#multi_doc_select_input(type='text' placeholder="Lookup #{ref_model}.." autocomplete="off")
+    //- each selections
+    //-     .ui.large.basic.label
+    //-         |#{title}
+    with referenced_business
+        .ui.header #{title}
+    //- if doc_results
+    //-     .ui.attached.secondary.segment
+    //-         .ui.middle.aligned.selection.animated.list
+    //-             each doc_results
+    //-                 .select_doc.item
+    //-                     h2.ui.header
+    //-                         //- img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+    //-                         strong + #{guest_name} #{first_name} #{last_name}
+
 
 template(name='single_unit_edit')
     .ui.header single unit lookup
@@ -1131,7 +1150,7 @@ template(name='single_person_edit')
                                  |@#{username}
                                 .ui.sub.header #{building_number} #{address}
             else
-                .ui.header No results
+                .ui.header no results
             // .ui.list
             //     each field_value
             //         |#{this}
