--- a/components/social/groups.jade
+++ b/components/social/groups.jade
@@ -48,6 +48,7 @@ template(name='groups')
                     
 template(name='group_card_template')
     .ui.fluid.segment
+        img.ui.image(src="{{c.url image width=400 height=400}}")        
         a.ui.inline.header(href="/group/#{_id}/view")
             //- if icon
             //-     +i name=icon
@@ -77,8 +78,6 @@ template(name='groups_small')
                 a(href="/m/group/#{_id}/view")
                     if image
                         img.ui.mini.inline.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
-                    if picture
-                        img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
                     |#{title}
         
 
@@ -107,6 +106,7 @@ template(name='group_edit')
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
+                    +single_user_edit key='manager' label='manager' direct=true
                     //- +activity
                 .six.wide.column
                     +multi_user_edit key='members' direct=true
@@ -118,17 +118,21 @@ template(name='group_view')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .sixteen.wide.column 
+                .eight.wide.column 
                     a.ui.icon.button(href="/m/group" title='view groups')
-                        //- +i name='elections' classes='ui avatar image'
                         i.left.chevron.icon
+                        +i name='groups' classes='ui avatar image'
                         |groups
-                    .ui.inline.header
+                    img.ui.medium.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
+                .eight.wide.column
+                    h1.ui.header
                         if icon
                             +i name=icon
-                        +text_view key='title' label='title' direct=true
+                        |#{title}
                     a.ui.big.icon.button(href="/group/#{_id}/edit")
                         i.pencil.icon
+                    .ui.small.grey.header managed by #{manager}
+                    .ui.small.grey.header #{members.length} members
             .row
                 .four.wide.column 
                     +array_view key='tags' label='tags' icon='tags' direct=true
@@ -136,7 +140,7 @@ template(name='group_view')
                     +image_view key='image' icon='image' label='image' direct=true
                     +viewing
                 .six.wide.column
-                    +multi_user_edit key='members' direct=true
+                    +multi_user_view key='members' direct=true
                     +boolean_edit key='private' direct=true
                     +voting_full
                 .six.wide.column 
