--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,7 +4,7 @@ template(name='nav')
             if is_loading
                 .icon.item
                     //- i.big.spinning.yin.yang.cancel.icon
-                    i.big.spinning.pulse.plus.icon.cancel
+                    i.big.spinning.pulse.plus.blue.icon.cancel
                     //- i.big.blue.spinning.pulse.plus.icon.cancel
             unless is_current_staff
                 unless is_loading
