--- a/components/profile/user_sections.jade
+++ b/components/profile/user_sections.jade
@@ -17,6 +17,25 @@ template(name='user_workhistory')
         if resume
             +pdf_view key='resume' label='resume' direct=true
     
+template(name='user_offers')
+    .ui.header 
+        +i name='sell' classes='ui inline image'
+        |offers
+    a.ui.button(href="/m/offer") 
+        i.external.icon
+        |view all
+    .ui.button.new_offer
+        i.green.plus.icon
+        | offer #{user_from_username_param.name} something
+    
+    each offers
+        .ui.segment
+            .ui.header #{title}
+            .ui.small.header #{status}
+            +author_info
+            +edit_button
+            +view_button
+
 
 
 template(name='user_payment')
