--- a/client/home.jade
+++ b/client/home.jade
@@ -275,49 +275,49 @@ template(name='health_club_status_small')
         |upper hot tub
         +water_status slug='upper_hot_tub'
         //- div
-    .ui.small.horizontal.list
-        .item
-            |#{latest_uht_reading.temperature}&#8457;
-        .item
-            |#{latest_uht_reading.ph} ph 
-        .item
-            |#{latest_uht_reading.chlorine} chl
-        .item
-            |#{latest_uht_reading.when}
-        div
-        |by #{latest_uht_reading.author.name}
+    //- .ui.small.horizontal.list
+    //-     .item
+    //-         |#{latest_uht_reading.temperature}&#8457;
+    //-     .item
+    //-         |#{latest_uht_reading.ph} ph 
+    //-     .item
+    //-         |#{latest_uht_reading.chlorine} chl
+    //-     .item
+    //-         |#{latest_uht_reading.when}
+        //- div
+        //- |by #{latest_uht_reading.author.name}
     div
     .ui.inline.header lower hot tub
         +water_status slug='lower_hot_tub'
         //- div
-    .ui.small.horizontal.list
-        .item
-            |#{latest_lht_reading.temperature}&#8457;
-        .item
-            |#{latest_lht_reading.ph} ph 
-        .item
-            |#{latest_lht_reading.chlorine} chl
-        .item
-            |#{latest_lht_reading.when}
-        div
-        |by #{latest_lht_reading.author.name}
+    //- .ui.small.horizontal.list
+    //-     .item
+    //-         |#{latest_lht_reading.temperature}&#8457;
+    //-     .item
+    //-         |#{latest_lht_reading.ph} ph 
+    //-     .item
+    //-         |#{latest_lht_reading.chlorine} chl
+    //-     .item
+    //-         |#{latest_lht_reading.when}
+    //-     div
+    //-     |by #{latest_lht_reading.author.name}
             
     div
     .ui.inline.header
         | pool
         +water_status slug='pool'
         //- div
-    .ui.small.horizontal.list
-        .item
-            |#{latest_pool_reading.temperature}&#8457;
-        .item
-            |#{latest_pool_reading.ph} ph 
-        .item
-            |#{latest_pool_reading.chlorine} chl
-        .item
-            |#{latest_pool_reading.when}
-        div
-        |by #{latest_pool_reading.author.name}
+    //- .ui.small.horizontal.list
+    //-     .item
+    //-         |#{latest_pool_reading.temperature}&#8457;
+    //-     .item
+    //-         |#{latest_pool_reading.ph} ph 
+    //-     .item
+    //-         |#{latest_pool_reading.chlorine} chl
+    //-     .item
+    //-         |#{latest_pool_reading.when}
+    //-     div
+    //-     |by #{latest_pool_reading.author.name}
 
 
 template(name='water_status')
