--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -47,23 +47,23 @@ template(name='healthclub')
                     unless is_query
                         .row    
                             .ui.padded.grid
-                                //- +inline_doc slug='health_club_notices' classes='ui large header'
+                                +inline_doc slug='health_club_notices' classes='ui large header'
                                 if rick_mode
                                     .two.column.row
                                         .column
                                             //- .ui.header 
                                             //-     i.blue.info.icon
                                             //-     |hc info
-                                            .ui.header hours
+                                            .ui.header Hours
                                             .ui.large.list
-                                                .item mon 7a-10p
-                                                .item tues 7a-10p
-                                                .item wed 7a-10p
-                                                .item thur 7a-10p
-                                                .item fri 7a-9p
-                                                .item sat 8a-9p
-                                                .item sun 8a-10p
-                                            .ui.header onsite manager 
+                                                .item Mon 7a-10p
+                                                .item Tues 7a-10p
+                                                .item Wed 7a-10p
+                                                .item Thur 7a-10p
+                                                .item Fri 7a-9p
+                                                .item Sat 8a-9p
+                                                .item Sun 8a-10p
+                                            .ui.header Onsite Manager 
                                             .ui.small.header Rick Hamp 
                                             .ui.relaxed.large.list
                                                 .item 303-545-1787
@@ -78,16 +78,16 @@ template(name='healthclub')
                                             .ui.header 
                                                 i.blue.info.icon
                                                 |hc info
-                                            .ui.header hours
+                                            .ui.header Hours
                                             .ui.large.list
-                                                .item mon 7a-10p
-                                                .item tues 7a-10p
-                                                .item wed 7a-10p
-                                                .item thur 7a-10p
-                                                .item fri 7a-9p
-                                                .item sat 8a-9p
-                                                .item sun 8a-10p
-                                            .ui.header onsite manager 
+                                                .item Mon 7a-10p
+                                                .item Tues 7a-10p
+                                                .item Wed 7a-10p
+                                                .item Thur 7a-10p
+                                                .item Fri 7a-9p
+                                                .item Sat 8a-9p
+                                                .item Sun 8a-10p
+                                            .ui.header Onsite Manager 
                                             .ui.small.header Rick Hamp 
                                             .ui.relaxed.list
                                                 .item 303-545-1787
