--- a/components/maintenance/kiosk.jade
+++ b/components/maintenance/kiosk.jade
@@ -119,37 +119,37 @@ template(name='healthclub_session')
                                         .ui.inline.big.header
                                             i.plus.grey.icon
                                             |guest
-                                .poll_area
-                                    with current_poll
-                                        .ui.hidden.divider
-                                        .ui.tiny.grey.inline.header optional (+1 karma)
-                                        .ui.inline.header #{title}
-                                        //- each upvoter_ids
-                                        //-     .ui.label #{this}
-                                        //- each downvoter_ids
-                                        //-     .ui.label #{this}
-                                        //- //- each options
-                                        //-     .ui.button.choose_this #{this}
-                                        .ui.center.aligned.basic.segment
-                                            .ui.icon.big.button.vote_yes
-                                                i.thumbs.up.outline.big.icon
-                                            .ui.icon.big.button.vote_no
-                                                i.thumbs.down.outline.big.icon
-                    if user.kiosk_photo
-                        if user.member_waiver_signed
-                            if user.rules_and_regulations_signed
-                                .hc_visit_purpose
-                                    with checking_in_doc    
-                                        .ui.hidden.divider
-                                        .ui.tiny.grey.inline.header optional (+1 karma)
-                                        .ui.inline.header purpose of visit
-                                        +boolean_edit key='weight_lifting' label='weights' direct=true
-                                        +boolean_edit key='cardio' label='cardio' direct=true
-                                        +boolean_edit key='hot tub' label='hot tub' direct=true
-                                        +boolean_edit key='pool' label='pool' direct=true
-                                        +boolean_edit key='sauna_steamroom' label='sauna/steamroom' direct=true
-                                        +boolean_edit key='garden_key' label='garden key' direct=true
-                                        +boolean_edit key='other' label='other' direct=true
+                                //- .poll_area
+                                //-     with current_poll
+                                //-         .ui.hidden.divider
+                                //-         .ui.tiny.grey.inline.header optional (+1 karma)
+                                //-         .ui.inline.header #{title}
+                                //-         //- each upvoter_ids
+                                //-         //-     .ui.label #{this}
+                                //-         //- each downvoter_ids
+                                //-         //-     .ui.label #{this}
+                                //-         //- //- each options
+                                //-         //-     .ui.button.choose_this #{this}
+                                //-         .ui.center.aligned.basic.segment
+                                //-             .ui.icon.big.button.vote_yes
+                                //-                 i.thumbs.up.outline.big.icon
+                                //-             .ui.icon.big.button.vote_no
+                                //-                 i.thumbs.down.outline.big.icon
+                    //- if user.kiosk_photo
+                    //-     if user.member_waiver_signed
+                    //-         if user.rules_and_regulations_signed
+                    //-             .hc_visit_purpose
+                    //-                 with checking_in_doc    
+                    //-                     .ui.hidden.divider
+                    //-                     .ui.tiny.grey.inline.header optional (+1 karma)
+                    //-                     .ui.inline.header purpose of visit
+                    //-                     +boolean_edit key='weight_lifting' label='weights' direct=true
+                    //-                     +boolean_edit key='cardio' label='cardio' direct=true
+                    //-                     +boolean_edit key='hot tub' label='hot tub' direct=true
+                    //-                     +boolean_edit key='pool' label='pool' direct=true
+                    //-                     +boolean_edit key='sauna_steamroom' label='sauna/steamroom' direct=true
+                    //-                     +boolean_edit key='garden_key' label='garden key' direct=true
+                    //-                     +boolean_edit key='other' label='other' direct=true
                             //- +boolean_edit key='weight_lifting' label='weights' direct=true
                             //- div
                             //- +boolean_edit key='cardio' label='cardio' direct=true
